2003-01-09  Daniel Lopez Ridruejo <daniel @ rawbyte.com>
	* mcs/ApacheWorkerRequest.cs : Fixed typo, thanks Sergio Luis Valle Mayorga for catching it

2003-01-07  Daniel Lopez Ridruejo <daniel @ rawbyte.com>
	* INSTALL: Add new config instructions. Only a MonoApplication directive is needed right now
	* src/mod_mono.c: Get rid of LoadModMonoDll, per Miguel suggestion, we look for the assembly
	in the assembly path now. Add MonoApplication directive, this simplies compfiguration greatly.
	* src/Makefile.am : makedll.mak was not being included in the distribution
	* src/ApacheWorkerRequest.cs : Do nothing with Content-Length, it will be set by Apache
	
2003-01-06  Daniel Lopez Ridruejo <daniel @ rawbyte.com>
	* src/mod_mono.c: Added setter macros and allow setting status
	line and status code. Set r->content_type when Content-Type is set
	* src/Request.cs: Added SetStatusLine and SetStatusCode
	* src/ApacheWorkerRequest.cs: Added SendStatus
	
2003-01-03  Daniel Lopez Ridruejo <daniel @ rawbyte.com>
	* src/mod_mono.c: Added support functions for reading HTTP bodies,
	this enables POST support:
	mono_apache_should_client_block,
	mono_apache_setup_client_block,
	mono_apache_get_client_block
	* src/ApacheWorkerRequest : Added ReadEntityBody
	* src/Request : Added ShouldClientBlock, SetupClientBlock, GetClientBlock
	for reading HTTP bodies and enabling POST support

2002-12-31  Daniel Lopez Ridruejo <daniel @ rawbyte.com>
	* INSTALL: Added reference to machine.config
	* configure.in: Update version to 0.2
	* src/Makefile.am: Fix typo so 'make dist' works

2002-12-30  Daniel Lopez Ridruejo <daniel @ rawbyte.com>
	* src/mod_mono.c: Fix ApacheApplicationHost creation:
	Method signature uses intptr and method to invoke is static.
	Pass request to ProcessRequest()	
	* src/ApacheWorkerRequest.cs: Add GetFilePathTranslated, since
	is not mapping correctly in MonoWorkerRequest

2002-12-30  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AUTHORS: added myself.